Fixed an issue that caused the bottom row to have its background color removed on small height resolutions

--- a/main.css
+++ b/main.css
@@ -49,6 +49,7 @@ body {
 }
 
 .container-payflow {
+	min-height: 400px;
 	width: 26.5vw;
 	float: left;
 }
